--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
         <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
               <li>
-                <%=link_to "Home",root_path, class:"fas fa-home nav-link text-light" %>
+                <%=link_to "Home",user_path(current_user.id), class:"fas fa-home nav-link text-light" %>
               </li>
               <li>
                 <%=link_to "Users",users_path, class:"fas fa-users nav-link text-light" %>
@@ -43,7 +43,7 @@
                 <%=link_to "Home",root_path, class:"fas fa-home nav-link text-light" %>
               </li>
               <li>
-                <%=link_to "About",about_path, class:"fas fa-link nav-link text-light" %>
+                <%=link_to "About", home_about_path, class:"fas fa-link nav-link text-light" %>
               </li>
               <li>
                 <%=link_to "sign up",new_user_registration_path, class:"fas fa-user-plus nav-link text-light" %>
@@ -57,6 +57,7 @@
       </div>
     </header>
     <main>
+      <%= flash[:notice] %>
       <%= yield %>
     </main>
     <footer>
