--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -20,10 +20,13 @@
             <th>Title</th>
             <th>Opinion</th>
             <th></th>
+            <th></th>
+            <th></th>
           </tr>
         </thead>
-         <% @books.each do |book| %>
+
         <tbody>
+          <% @books.each do |book| %>
           <tr>
             <td>
               <%= link_to user_path(book.user_id) do %>
@@ -32,10 +35,13 @@
            </td>
             <td><%= link_to book.title, book_path(book.id)%></td>
             <td><%= book.body %></td>
-          </tr>
-           <% end %>
-        </tbody>
 
+
+            <td><%= render "favorites/favorite", book: book %></td>
+            <td>コメント数: <%= book.book_comments.count %></td>
+          </tr>
+          <% end %>
+        </tbody>
       </table>
 </div>
 </div>
