--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,6 +15,9 @@
         </td>
         <td><%=link_to @book.title, book_path(@book.id) %></td>
         <td><%= @book.body %></td>
+        <td><%= render "favorites/favorite", book: @book %></td>
+        <td>コメント件数:<%= @book.book_comments.count %></td>
+
         <% if @user.id == current_user.id %>
           <td><%=link_to "Edit", edit_book_path, class:"btn btn-sm btn-success" %></td>
           <td><%=link_to "Destroy", book_path(@book.id), method: :delete, class:"btn btn-sm btn-danger", data: { confirm: '本当に消しますか？' }  %></td>
@@ -23,5 +26,6 @@
 
     </tboy>
   </table>
+  <%= render "book_comments/comment", book: @book, user: @user, book_comment: @book_comment %>
 </div>
 </div>
