--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,5 @@
 <div class="container">
- <% if @book.errors.any? %>
-  <%= @book.errors.count %>errors
-  <% @book.errors.full_messages.each do |message| %>
-    <%= message %>
-  <% end %>
- <% end %>
+ <%= render "books/error", book: @book %>
   <div class="row">
     <div class="col-sm-11 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <p id="notice"></p>
