--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,5 @@
 <div class="container px-5 px-sm-0">
-<% if @book.errors.any? %>
-  <%= @book.errors.count %>errors
-  <% @book.errors.full_messages.each do |message| %>
-    <%= message %>
-  <% end %>
-<% end %>
+<%= render "books/error", book: @book %>
 <div class="row">
   <div class="col-md-3">
     <%= render 'books/info',book: @book, user: @user %>
